--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"<html><body><h1>Hello, Git!</h1></body></html>" 
+<html>
+<body>
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <h1>Hello, Git!</h1>
+</body>
+</html>
